# aurelia

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  STRUCTURE.md  TODO.md  __init__.py  api.py  backend_main.py  check_csv.py  health_coach.py  json_adapter.py  main.py  next.config.js  package-lock.json  package.json  pyproject.toml  quick_api_test.py  requirements.txt  run_api.py  run_backend.sh  schemas.py  start_api.py  tailwind.config.ts  test-phase1.sh  test_api.py  test_api_client.py  test_client.html  test_direct.py  test_skin_age.py  tools.py  vercel.json
api/: index.py
app/: globals.css  layout.tsx  page.tsx
app/achievements/: page.tsx
app/analytics/: page.tsx
app/dashboard/: page.tsx
app/paywall/: page.tsx
app/questionnaire/: page.tsx  page.tsx.bak
app/recommendations/: page.tsx
app/results/: page.tsx
app/review/: page.tsx
app/upload/: page.tsx
backend/: README.md  app.py  config.yaml  generator.py  prompt.md  requirements.txt
components/achievements/: AchievementBadge.tsx  AchievementCard.tsx  UnlockAnimation.tsx
components/analytics/: BodySystemView.tsx  RadarChart.tsx
components/dashboard/: GoalTracker.tsx  ProgressRing.tsx  TrendChart.tsx
components/questionnaire/: QuestionnaireForm.tsx
components/recommendations/: ActionPlan.tsx
components/results/: BiomarkerChart.tsx  HealthScoreGauge.tsx  PDFExport.tsx
components/ui/: Header.tsx  InteractiveBackground.tsx  ThemeProvider.tsx  ThemeToggle.tsx
data/: Naomi_and_Ana_dataset.xlsx
lib/achievements/: definitions.ts  tracker.ts  useAchievements.ts
tests/: __init__.py  test_biomarker_enrichment.py  test_biomarker_lookup.py  test_emma_full_integration.py  test_inflammation_score.py  test_integration.py  test_metabolic_score.py  test_oxygen_score.py  test_simple_no_photo.py  test_with_photo.py
types/: index.ts
(+22 files in other folders)
